# project1_django

project1/: .gitignore  LICENSE  index.html  log_requests.txt  manage.py  notes.txt  pyproject.toml  title message
project1/cardmode/: apps.py  permissions.py  urls.py
project1/cardmode/serializers/: __init__.py
project1/cardmode/templates/cardmode/: studying_mode.html  studying_mode_tg.html
project1/cardmode/views/: __init__.py  get_similar_words.py  studying_mode.py
project1/cardmode/views/api/: __init__.py  similar_words_api.py  study_mode_api.py
project1/cards/: db_filling.py  dev_and_test_space.ipynb  exceptions.py  forms.py  middleware.py  models.py  parser_hw.py  query_builder.py  serializers.py  sm-2.py  tests.py  urls.py  views.py
project1/cards/migrations/: 0001_initial.py  0002_cards_categories_users_mappings_categories_user.py  0003_rename_status_mappings_mem_rating_alter_card_box.py  0004_categories_slug_alter_categories_name.py  0005_alter_categories_slug.py  0006_alter_categories_slug.py  0007_alter_categories_slug_alter_mappings_timestamp.py  0008_testsides.py  0009_alter_testsides_relation.py  0010_remove_mappings_timestamp_mappings_in_study_process_and_more.py  0011_mappings_front_side.py  0012_rename_front_side_mappings_is_back_side.py  0013_mappings_upd_date.py  0014_alter_mappings_upd_date.py  0015_activestudycards.py  0016_alter_activestudycards_table.py  0017_rename_activestudycards_activestudy.py  0018_mappings_study_mode.py  0019_alter_mappings_study_mode.py  0020_rename_params_mappings_review_params_and_more.py  0021_alter_mappings_easiness.py  0022_alter_mappings_study_mode.py  0023_alter_cards_audio.py  0024_alter_categories_user.py  0025_alter_categories_name.py  0026_rename_audio_cards_audio_side1_cards_audio_side2.py  0027_alter_categories_slug.py  0028_alter_categories_slug.py  0029_mappings_has_two_sides.py  0030_remove_mappings_is_back_side.py  0031_rename_audio_side1_cards_audio_and_more.py  0032_alter_categories_name.py
project1/cards/services/: __init__.py  check_permission.py  check_post_request.py  compute_study_metrics.py  first_deck_fill.py  handle_card_import.py  query_builder (копия).py  query_builder.py  second_side_creator.py
project1/cards/templates/cards/: answers_rating.html  base.html  box.html  box_categories_links.html  card.html  (+18 more)
project1/cards/templatetags/: cards_filters.py  cards_tags.py
project1/cards/views/: __init__.py  studying_mode.py  upload_cards.py  views.py
project1/config/: project1.conf
project1/deckhub/: apps.py  serializers.py  tests.py  urls.py
project1/deckhub/templatetags/: decks_tags.py
project1/deckhub/views/: __init__.py  deckmanage.py
project1/deployment_configs/: check_and_run.sh  gunicorn.conf.py  project1.conf
project1/open_ai/views/: __init__.py  chat_gpt.py
project1/project1/project1/: settings.py
project1/project_1/: authentication.py  context_processors.py  gd.sqlite3  settings.py  settings_prod.py  urls.py  wsgi.py
project1/speech/: urls.py
project1/speech/views/: text_to_speech.py
project1/static/css/: reset.css  style.css  style_home_page.css
project1/users/: admin.py  forms.py  models.py  serializers.py  urls.py
project1/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_alter_user_username.py  0004_telegramuser.py  0005_telegramuser_language.py  0006_user_language_user_session_config_user_telegram_id_and_more.py  0007_alter_user_telegram_id.py  0008_alter_user_username.py  0009_user_privilege_level.py
project1/users/views/: __init__.py  auth_view.py  home_page.py
(+33 files in other folders)
